Fixed merge conflicts and added plane direction feature

--- a/frontend/src/renderer/screens/monitoring/monitoring.html
+++ b/frontend/src/renderer/screens/monitoring/monitoring.html
@@ -461,30 +461,57 @@
             const maxPlanes = 1000;
             const planes = data.states.slice(0, maxPlanes);
 
+            // Create a function to generate rotated icons
+            function createRotatedPlaneIcon(heading) {
+              const iconHtml = `
+    <div style="
+      width: 32px; 
+      height: 32px; 
+      transform: rotate(${heading}deg);
+      transform-origin: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    ">
+      <img src="../../../assets/airplane.png" style="width: 32px; height: 32px;" alt="plane" />
+    </div>
+  `;
+
+              return L.divIcon({
+                html: iconHtml,
+                iconSize: [32, 32],
+                iconAnchor: [16, 16],
+                popupAnchor: [0, -16],
+                className: "custom-plane-icon",
+              });
+            }
+
+            // Then in your forEach loop:
             planes.forEach((state) => {
               const lat = state[6];
               const lon = state[5];
-              if (lat && lon && !isNaN(lat) && !isNaN(lon)) {
-                const callsign = state[1]?.trim() || "Unknown";
-                const altitude = Math.round((state[7] || 0) * 3.28084);
-                const velocity = Math.round((state[9] || 0) * 2.236936);
-                const heading = state[10];
+              const callsign = state[1]?.trim() || "Unknown";
+              const altitude = Math.round((state[7] || 0) * 3.28084);
+              const velocity = Math.round((state[9] || 0) * 2.236936);
+              const heading = state[10];
 
+              if (lat && lon && !isNaN(lat) && !isNaN(lon)) {
                 if (heading !== null && !isNaN(heading)) {
+                  // Use the CSS-based rotated icon
+                  const rotatedIcon = createRotatedPlaneIcon(heading);
+
                   const marker = L.marker([lat, lon], {
-                    icon: planeIcon,
-                    rotationAngle: heading,
-                    rotationOrigin: "center center",
+                    icon: rotatedIcon,
                   });
 
                   marker.bindPopup(`
-                    <b>Flight: ${callsign}</b><br>
-                    Altitude: ${altitude} ft<br>
-                    Speed: ${velocity} mph<br>
-                    Heading: ${heading}°
-                  `);
+        <b>Flight: ${callsign}</b><br>
+        Altitude: ${altitude} ft<br>
+        Speed: ${velocity} mph<br>
+        Heading: ${heading}°
+      `);
 
-                  marker.addTo(featureLayers.aircraft);
+                  marker.addTo(aircraftLayer);
                 }
               }
             });
