--- a/frontend/src/renderer/screens/analysis/analysis.html
+++ b/frontend/src/renderer/screens/analysis/analysis.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OmniView - Analytics</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css"
+    />
     <link rel="stylesheet" href="analysis.css" />
   </head>
   <body>
@@ -14,7 +20,9 @@
         <!-- Sidebar content unchanged -->
         <div class="sidebar-header">
           <div class="sidebar-title-container">
-            <div class="sidebar-title active-screen" id="sidebarTitle">ANALYTICS</div>
+            <div class="sidebar-title active-screen" id="sidebarTitle">
+              ANALYTICS
+            </div>
             <div class="dropdown-arrow">▼</div>
           </div>
           <div class="screen-dropdown" id="screenDropdown">
@@ -38,27 +46,55 @@
         <div class="content-area">
           <div class="default-content" id="defaultContent">
             <h2>Analytics Dashboard</h2>
-            <p>Welcome to the Analytics section. Visualize disaster patterns, land classifications, NDVI trends, and more with AI-simulated tools.</p>
+            <p>
+              Welcome to the Analytics section. Visualize disaster patterns,
+              land classifications, NDVI trends, and more with AI-simulated
+              tools.
+            </p>
           </div>
 
           <div id="analyticsContainer">
             <div class="filters">
-              <label>Filter by Year: <select id="yearFilter"><option value="">All</option></select></label>
-              <label>Disaster Type: <select id="typeFilter"><option value="">All</option><option value="Flood">Flood</option><option value="Fire">Fire</option><option value="Earthquake">Earthquake</option></select></label>
+              <label
+                >Filter by Year:
+                <select id="yearFilter">
+                  <option value="">All</option>
+                </select></label
+              >
+              <label
+                >Disaster Type:
+                <select id="typeFilter">
+                  <option value="">All</option>
+                  <option value="Flood">Flood</option>
+                  <option value="Fire">Fire</option>
+                  <option value="Earthquake">Earthquake</option>
+                </select></label
+              >
             </div>
             <div class="analytics-grid">
               <div class="map-card">
                 <h3>🌍 Earth Observation Map</h3>
-                <div id="map" style="height: 400px;"></div>
-                <button id="analyzeBtn" class="action-btn">Analyze Selected Area</button>
+                <div id="map" style="height: 400px"></div>
+                <button id="analyzeBtn" class="action-btn">
+                  Analyze Selected Area
+                </button>
                 <button id="ndviBtn" class="action-btn">Compute NDVI</button>
               </div>
 
               <div class="charts-card">
                 <h3>📈 Disaster Trends</h3>
-                <input type="range" id="timeSlider" min="2019" max="2025" value="2025" style="width: 100%;">
+                <input
+                  type="range"
+                  id="timeSlider"
+                  min="2019"
+                  max="2025"
+                  value="2025"
+                  style="width: 100%"
+                />
                 <canvas id="trendChart"></canvas>
-                <button id="exportTrend" class="action-btn small">Export Chart</button>
+                <button id="exportTrend" class="action-btn small">
+                  Export Chart
+                </button>
               </div>
 
               <div class="charts-card">
@@ -69,7 +105,9 @@
               <div class="charts-card">
                 <h3>⚠️ Disaster Types</h3>
                 <canvas id="disasterBarChart"></canvas>
-                <button id="exportBar" class="action-btn small">Export Chart</button>
+                <button id="exportBar" class="action-btn small">
+                  Export Chart
+                </button>
               </div>
             </div>
           </div>
@@ -81,7 +119,9 @@
             <button class="expand-btn">Expand ▲</button>
           </div>
           <div class="logs-content">
-            <div class="log-info">Info: Analytics screen loaded successfully</div>
+            <div class="log-info">
+              Info: Analytics screen loaded successfully
+            </div>
           </div>
         </div>
 
@@ -99,7 +139,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script> <!-- For export -->
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <!-- For export -->
     <script src="analysis.js"></script>
   </body>
 </html>
