--- a/frontend/src/renderer/screens/analysis/analysis.html
+++ b/frontend/src/renderer/screens/analysis/analysis.html
@@ -16,8 +16,8 @@
   </head>
   <body>
     <div class="main-container">
+
       <div class="sidebar">
-        <!-- Sidebar content unchanged -->
         <div class="sidebar-header">
           <div class="sidebar-title-container">
             <div class="sidebar-title active-screen" id="sidebarTitle">
@@ -40,6 +40,24 @@
             </div>
           </div>
         </div>
+        <div class="menu-section">
+          <div class="menu-item active" data-section="overview">
+            <div class="item-icon">📊</div>
+            <span>Overview</span>
+          </div>
+          <div class="menu-item" data-section="trends">
+            <div class="item-icon">📈</div>
+            <span>Trends</span>
+          </div>
+          <div class="menu-item" data-section="classification">
+            <div class="item-icon">🗺️</div>
+            <span>Classification</span>
+          </div>
+          <div class="menu-item" data-section="ndvi">
+            <div class="item-icon">🌱</div>
+            <span>NDVI</span>
+          </div>
+        </div>
       </div>
 
       <div class="content-container">
@@ -55,59 +73,51 @@
 
           <div id="analyticsContainer">
             <div class="filters">
-              <label
-                >Filter by Year:
+              <label>
+                Filter by Year:
                 <select id="yearFilter">
                   <option value="">All</option>
-                </select></label
-              >
-              <label
-                >Disaster Type:
+                </select>
+              </label>
+              <label>
+                Disaster Type:
                 <select id="typeFilter">
                   <option value="">All</option>
                   <option value="Flood">Flood</option>
                   <option value="Fire">Fire</option>
                   <option value="Earthquake">Earthquake</option>
-                </select></label
-              >
+                </select>
+              </label>
             </div>
             <div class="analytics-grid">
-              <div class="map-card">
-                <h3>🌍 Earth Observation Map</h3>
-                <div id="map" style="height: 400px"></div>
-                <button id="analyzeBtn" class="action-btn">
-                  Analyze Selected Area
-                </button>
-                <button id="ndviBtn" class="action-btn">Compute NDVI</button>
+              <div class="overview-section" id="overviewSection">
+                <div class="map-card">
+                  <h3>🌍 Earth Observation Map</h3>
+                  <div id="map" style="height: 400px"></div>
+                  <button id="analyzeBtn" class="action-btn">Analyze Selected Area</button>
+                  <button id="ndviBtn" class="action-btn">Compute NDVI</button>
+                </div>
               </div>
-
-              <div class="charts-card">
-                <h3>📈 Disaster Trends</h3>
-                <input
-                  type="range"
-                  id="timeSlider"
-                  min="2019"
-                  max="2025"
-                  value="2025"
-                  style="width: 100%"
-                />
-                <canvas id="trendChart"></canvas>
-                <button id="exportTrend" class="action-btn small">
-                  Export Chart
-                </button>
+              <div class="trends-section" id="trendsSection" style="display:none;">
+                <div class="charts-card">
+                  <h3>📈 Disaster Trends</h3>
+                  <input type="range" id="timeSlider" min="2019" max="2025" value="2025" style="width: 100%" />
+                  <canvas id="trendChart"></canvas>
+                  <button id="exportTrend" class="action-btn small">Export Chart</button>
+                </div>
               </div>
-
-              <div class="charts-card">
-                <h3>🗺️ Land Classification</h3>
-                <canvas id="classificationChart"></canvas>
+              <div class="classification-section" id="classificationSection" style="display:none;">
+                <div class="charts-card">
+                  <h3>🗺️ Land Classification</h3>
+                  <canvas id="classificationChart"></canvas>
+                </div>
               </div>
-
-              <div class="charts-card">
-                <h3>⚠️ Disaster Types</h3>
-                <canvas id="disasterBarChart"></canvas>
-                <button id="exportBar" class="action-btn small">
-                  Export Chart
-                </button>
+              <div class="ndvi-section" id="ndviSection" style="display:none;">
+                <div class="charts-card">
+                  <h3>⚠️ Disaster Types</h3>
+                  <canvas id="disasterBarChart"></canvas>
+                  <button id="exportBar" class="action-btn small">Export Chart</button>
+                </div>
               </div>
             </div>
           </div>
